# playlist-script

./: .playlist.json  Cargo.toml  flake.nix
src/: main.rs  structs.rs  utils.rs
